{
  "version": 4,
  "terraform_version": "1.11.2",
  "serial": 1171,
  "lineage": "e32b4a5b-c502-e01a-ad60-8fed0c7af0ef",
  "resources": [
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lambda_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:116981784599:security-group/sg-09acec87987c7c865",
            "description": "Security group for Lambda",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS to Secrets Manager",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow PostgreSQL to RDS",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "id": "sg-09acec87987c7c865",
            "ingress": [],
            "name": "lambda-sg",
            "name_prefix": "",
            "owner_id": "116981784599",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "Name": "lambda-sg",
              "Project": "my-app"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "lambda-sg",
              "Project": "my-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-063b8f2900301b312"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:116981784599:security-group/sg-083cf450ffc9f7f0b",
            "description": "Allow Lambda to access RDS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-083cf450ffc9f7f0b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09acec87987c7c865"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "rds-sg",
            "name_prefix": "",
            "owner_id": "116981784599",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "Name": "rds-sg",
              "Project": "my-app"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "rds-sg",
              "Project": "my-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-063b8f2900301b312"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_groups.aws_security_group.lambda_sg",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_endpoint_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:116981784599:security-group/sg-0066b6f7c7266137f",
            "description": "Security group for Secrets Manager VPC Endpoint",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0066b6f7c7266137f",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow HTTPS from Lambda",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09acec87987c7c865"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "vpc-endpoint-sg",
            "name_prefix": "",
            "owner_id": "116981784599",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "Name": "vpc-endpoint-sg",
              "Project": "my-app"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "vpc-endpoint-sg",
              "Project": "my-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-063b8f2900301b312"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_groups.aws_security_group.lambda_sg",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:116981784599:internet-gateway/igw-0f23753fb9dd2d54f",
            "id": "igw-0f23753fb9dd2d54f",
            "owner_id": "116981784599",
            "tags": {
              "Environment": "prod",
              "Name": "main-igw",
              "Project": "my-app"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "main-igw",
              "Project": "my-app"
            },
            "vpc_id": "vpc-063b8f2900301b312"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:116981784599:route-table/rtb-01d8a45cccf8b2ca2",
            "id": "rtb-01d8a45cccf8b2ca2",
            "owner_id": "116981784599",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "prod",
              "Name": "private-route-table",
              "Project": "my-app"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "private-route-table",
              "Project": "my-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-063b8f2900301b312"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:116981784599:route-table/rtb-031cf3ad2abced4ed",
            "id": "rtb-031cf3ad2abced4ed",
            "owner_id": "116981784599",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f23753fb9dd2d54f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "prod",
              "Name": "public-route-table",
              "Project": "my-app"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "public-route-table",
              "Project": "my-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-063b8f2900301b312"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09b60f548c23e8385",
            "route_table_id": "rtb-01d8a45cccf8b2ca2",
            "subnet_id": "subnet-09a65d1f07cac8ff3"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private_db_a",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b5692e1e7ce10e51",
            "route_table_id": "rtb-01d8a45cccf8b2ca2",
            "subnet_id": "subnet-0593f4e9287035ec0"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private_db_b",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a91f15b3e126870a",
            "route_table_id": "rtb-031cf3ad2abced4ed",
            "subnet_id": "subnet-0c66cb9f8eb2d8ebd"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_db_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:116981784599:subnet/subnet-09a65d1f07cac8ff3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09a65d1f07cac8ff3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "116981784599",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "Name": "private-db-subnet-a",
              "Project": "my-app"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "private-db-subnet-a",
              "Project": "my-app"
            },
            "vpc_id": "vpc-063b8f2900301b312"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_db_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:116981784599:subnet/subnet-0593f4e9287035ec0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0593f4e9287035ec0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "116981784599",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "Name": "private-db-subnet-b",
              "Project": "my-app"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "private-db-subnet-b",
              "Project": "my-app"
            },
            "vpc_id": "vpc-063b8f2900301b312"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:116981784599:subnet/subnet-0c66cb9f8eb2d8ebd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c66cb9f8eb2d8ebd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "116981784599",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "Name": "public-subnet",
              "Project": "my-app"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "public-subnet",
              "Project": "my-app"
            },
            "vpc_id": "vpc-063b8f2900301b312"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:116981784599:vpc/vpc-063b8f2900301b312",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-008d8190f3591e378",
            "default_route_table_id": "rtb-017e8091718a1a662",
            "default_security_group_id": "sg-0845ed090e4f85880",
            "dhcp_options_id": "dopt-0a2b513abce1c5b68",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-063b8f2900301b312",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-017e8091718a1a662",
            "owner_id": "116981784599",
            "tags": {
              "Environment": "prod",
              "Name": "main-vpc",
              "Project": "my-app"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "main-vpc",
              "Project": "my-app"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc_endpoints",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "secrets_manager",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:116981784599:vpc-endpoint/vpce-0b32c1f7683b8eafc",
            "dns_entry": [
              {
                "dns_name": "vpce-0b32c1f7683b8eafc-9npyn01m.secretsmanager.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0b32c1f7683b8eafc-9npyn01m-us-east-1b.secretsmanager.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0b32c1f7683b8eafc-9npyn01m-us-east-1a.secretsmanager.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "secretsmanager.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z0179871JBQZZOJ1P3AE"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0b32c1f7683b8eafc",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-09acbdde63b8b8f01",
              "eni-0a53a91df723e2e19"
            ],
            "owner_id": "116981784599",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0066b6f7c7266137f"
            ],
            "service_name": "com.amazonaws.us-east-1.secretsmanager",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.1.88",
                "subnet_id": "subnet-09a65d1f07cac8ff3"
              },
              {
                "ipv4": "10.0.2.102",
                "subnet_id": "subnet-0593f4e9287035ec0"
              }
            ],
            "subnet_ids": [
              "subnet-0593f4e9287035ec0",
              "subnet-09a65d1f07cac8ff3"
            ],
            "tags": {
              "Environment": "prod",
              "Name": "secrets-manager-vpc-endpoint",
              "Project": "my-app"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "secrets-manager-vpc-endpoint",
              "Project": "my-app"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-063b8f2900301b312"
          },
          "dependencies": [
            "module.security_groups.aws_security_group.lambda_sg",
            "module.security_groups.aws_security_group.vpc_endpoint_sg",
            "module.vpc.aws_subnet.private_db_a",
            "module.vpc.aws_subnet.private_db_b",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    }
  ]
}